Fix oveflow-x scroll on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,11 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Inter", sans-serif;
   font-weight: 500;
