--- a/src/pages/ProjectPage/ProjectPage.css
+++ b/src/pages/ProjectPage/ProjectPage.css
@@ -58,17 +58,15 @@
   color: var(--text-color);
 }
 
-
 /* ========== PROJECT BOARD ========== */
 
 .task-board {
   display: flex;
   gap: 1rem;
-  align-items: flex-start; 
+  align-items: flex-start;
 
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  -webkit-overflow-scrolling: touch;
   padding-bottom: 1rem;
 }
 
@@ -85,7 +83,7 @@
   padding: 1rem;
 
   border-radius: 0.5rem;
-  background: #f9f9f9;  
+  background: #f9f9f9;
 }
 
 .task-column__header {
@@ -151,7 +149,7 @@
   align-items: center;
   font-size: 0.75rem;
   color: var(--count-color);
-  background-color: var(--count-background); 
+  background-color: var(--count-background);
   border-radius: 50%;
 }
 
@@ -160,7 +158,6 @@
   flex-direction: column;
   gap: 1rem;
 }
-
 
 /* ========== PROJECT CARD ========== */
 
@@ -225,7 +222,6 @@
     gap: 1rem;
   }
 }
-
 
 @media (max-width: 45rem) {
   .task-controls__button-name {
